3.5/mule-user-guide/jms-transport-reference.adoc
= JMS Transport Reference

http://java.sun.com/products/jms/docs.html[JMS (Java Message Service)] is a widely-used API for http://en.wikipedia.org/wiki/Message_Oriented_Middleware[Message Oriented Middleware]. It allows communication between different components of a distributed application to be loosely coupled, reliable, and asynchronous.

JMS supports two models for messaging:

* *Queues* - Point-to-point
* *Topics* - Publish and subscribe

Mule's JMS transport lets you easily send and receive messages to queues and topics for any message service which implements the JMS specification.

*Note*: The Mule JMS connector does not support a validateConnections attribute.

== Transport Info

[width="100%",cols=",",options="header"]
|===
|Transport |Doc |Inbound |Outbound |Request |Transactions |Streaming |Retries |MEPs |Default MEP |Maven Artifact
|JMS a|link:/docs/site/current3/apidocs/org/mule/transport/jms/package-summary.html[JavaDoc]

link:/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jms/namespace-overview.html[SchemaDoc] |image:/http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[check] |image:/http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[check] |image:/http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[check] |image:/http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[check] (client,ack, local, XA) |image:/http://www.mulesoft.org/documentation/images/icons/emoticons/error.gif[error] |image:/http://www.mulesoft.org/documentation/images/icons/emoticons/check.gif[check] |one-way, request-response |one-way |`org.mule.transport:mule-transport-jms`
|===

////
collapse

*Legend*

*Transport* - The name/protocol of the transport
*Docs* - Links to the JavaDoc and SchemaDoc for the transport
*Inbound* - Whether the transport can receive inbound events and can be used for an inbound endpoint
*Outbound* - Whether the transport can produce outbound events and be used with an outbound endpoint
*Request* - Whether this endpoint can be queried directly with a reuqest call (via MuleClinet or the EventContext)
*Transactions* - Whether transactions are supported by the transport. Transports that support transactions can be configured in either local or distributed two-phase commit (XA) transaction.
*Streaming* - Whether this transport can process messages that come in on an input stream. This allows for very efficient processing of large data. For more information, see Streaming.
*Retry* - Whether this transport supports retry policies. Note that all transport can be configured with Retry policies, but only the ones marked here are officially supported by MuleSoft.
*MEPS* - Message Exchange Patterns supported by this transport
*Defualt MEP* - The default MEP for endpoints that use this transport that do not explicitly configure a MEP
*Maven Artifact* - The group name a artifact name for this transport in http://maven.apache.org/[Maven]
////

== Namespace and Syntax

XML namespace:

[source]
----
xmlns:jms "http://www.mulesoft.org/schema/mule/jms"
----

XML schema location:

[source]
----
http://www.mulesoft.org/schema/mule/jms/3.5/mule-jms.xsd
----

Connector syntax:

[source]
----
<jms:connector name="myConnector" specification="1.1" connectionFactory-ref="myConnectionFactory" username="myuser" password="mypass"/>
----

Endpoint syntax:

[source]
----
<jms:outbound-endpoint queue="my.queue"/>
 
<jms:inbound-endpoint topic="my.topic"/>
----

== Considerations

In the point-to-point or queuing model, a send posts messages to a particular queue and a receiver reads messages from the queue. Here, the sender knows the destination of the message and posts the message directly to the receiver's queue. It is characterized by the following:

* Only one consumer gets the message.
* The producer does not have to be running at the time the consumer consumes the message, nor does the consumer need to be running at the time the message is sent.
* Every message successfully processed is acknowledge by the consumer.

The publish/subscribe model supports publishing messages to a particular message topic. Subscribers may register interest in receiving messages on a particular message topic. In this model, neither the publisher nor the subscriber know about each other. A good analogy for the is an anonymous bulletin board. The following are characteristics of this model:

* Multiple consumers (or none) receive the message.
* There is a timing dependency between publishers and subscribers. The publisher has to create a message topic for clients to subscribe.
* The subscriber has to remain continously active to receive messages, unless it has established a durable subscription. In that case, the messages published while the subscriber is not connected redistribute when it reconnects.

== Features

* Supports both versions of JMS specification: 1.0.2b and 1.1.
* Supports queues and topics, durable or non-durable subscriptions.
* ConnectionFactory and Queues/Topics can be looked up via JNDI.
* Supports local (JMS), distributed (XA), and multi-resource link:/docs/display/35X/Transaction+Management[transactions] *Enterprise*
* Tested with a variety of JMS providers.
* Vendor-specific configuration available for popular providers.

[TIP]
====
*WebSphere MQ*

*Enterprise*

Mule Enterprise includes an link:/docs/display/35X/Mule+WMQ+Transport+Reference[enhanced transport for WebSphere MQ] which is recommended if you are using WebSphere MQ as your JMS provider.
====

== Usage

=== Declaring the Namespace

To use the JMS transport, you must first declare the JMS namespace in the header of your Mule configuration file. You can then configure the JMS connector and endpoints.

[width="100%",cols=",",options="header"]
|===
^|JMS Namespace
a|

[source]
----
<mule ...cut...
   xmlns:jms="http://www.mulesoft.org/schema/mule/jms"
   xsi:schemaLocation=" ...cut...
     http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/3.5/mule-jms.xsd">
----
|===

=== Configuring the Connector

There are several attributes available on the connector, most of which are optional. Refer to the schema documentation below for complete information.

[width="100%",cols=",",options="header"]
|===
^|Connector Attributes
a|

[source]
----
<jms:connector name="myConnector"
               acknowledgementMode="DUPS_OK_ACKNOWLEDGE"
               clientId="myClient"
               durable="true"
               noLocal="true"
               persistentDelivery="true"
               maxRedelivery="5"
               cacheJmsSessions="true"
               eagerConsumer="false"
               specification="1.1"
               numberOfConsumers="7"
               username="myuser"
               password="mypass" />
----
|===

=== Configuring the ConnectionFactory

One of the most important attributes is `connectionFactory-ref`. This is a reference to the ConnectionFactory object which will create new connections for your JMS provider. The object must implement the interface `javax.jms.ConnectionFactor`.

[width="100%",cols=",",options="header"]
|===
^|ConnectionFactory
a|

[source]
----
<spring:bean name="connectionFactory" class="com.foo.FooConnectionFactory"/>
 
<jms:connector name="jmsConnector1" connectionFactory-ref="connectionFactory" />
----
|===

There are also a few attributes which allow you to look up the ConnectionFactory from JNDI Context:

[width="100%",cols=",",options="header"]
|===
^|ConnectionFactory from JNDI
a|

[source]
----
<jms:connector name="jmsConnector"
    jndiInitialFactory="com.sun.jndi.ldap.LdapCtxFactory"
    jndiProviderUrl="ldap://localhost:10389/"
    jndiProviderProperties-ref="providerProperties"
    connectionFactoryJndiName="cn=ConnectionFactory,dc=example,dc=com" />
----
|===

[WARNING]
====
*JMS Performance*

For performance it is important to use the "Caching Connection Strategy" between you JMS Connector and the actual JMS ConnectionFactory implementation. For more information, see link:/docs/display/35X/JMS+Transport+Reference#JMSTransportReference-Cachingconnectionfactory[Caching connection factory] below.
====

=== Configuring the Endpoints

==== Queues

[source]
----
<jms:inbound-endpoint queue="my.queue"/>
<jms:outbound-endpoint queue="my.queue"/>
----

==== Topics

[source]
----
<jms:inbound-endpoint topic="my.topic"/>
<jms:outbound-endpoint topic="my.topic"/>
----

By default, Mule's subscription to a topic in non-durable (that is, it only receives messages while connected to the topic). You can make topic subscriptions durable by setting the `durable` attribute on the connector.

When using a durable subscription, the JMS server requires a durable name to identify each subscriber. By default, Mule generates the durable name in the format `mule.<connector name>.<topic name>`. If you want to specify the durable name yourself, you can do so using the `durableName` attribute on the endpoint.

[width="100%",cols=",",options="header"]
|===
^|Durable Topic
a|

[source]
----
<jms:connector name="jmsTopicConnector" durable="true"/>
<jms:inbound-endpoint topic="some.topic" durableName="sub1" />
<jms:inbound-endpoint topic="some.topic" durableName="sub2" />
<jms:inbound-endpoint topic="some.topic" durableName="sub3" />
----
|===

[NOTE]
====
*Number of Consumers*

In the case of a topic, the number of consumers on the endpoint is set to one. You can override this by setting `numberOfConcurrentTransactedReceivers` or `numberOfConsumers` on the connector.
====

=== Transformer

The default transformer applied to JMS endpoints are as follows:

inbound= link:/docs/site/current/apidocs/org/mule/transport/jms/transformers/JMSMessageToObject.html[JMSMessageToObject]

response= link:/docs/site/current/apidocs/org/mule/transport/jms/transformers/ObjectToJMSMessage.html[ObjectToJMSMessage]

outbound= link:/docs/site/current/apidocs/org/mule/transport/jms/transformers/ObjectToJMSMessage.html[ObjectToJMSMessage]

These automatically transform to/from the standard JMS message types:

[source]
----
javax.jms.TextMessage - java.lang.String
javax.jms.ObjectMessage - java.lang.Object
javax.jms.BytesMessage - byte[]
javax.jms.MapMessage - java.util.Map
javax.jms.StreamMessage - java.io.InputStream
----

== Looking Up JMS Objects from JNDI

If you have configured a JDNI context on the connector, you can also look up queues/topics via JNDI using the jndiDestinations attribute. If a queue/topic cannot be found via JNDI, its created using the existing JMS session unless you also set the `forceJndiDestinations` attribute.

There are two different ways to configure the JNDI settings:

. Using connector properties (deprecated):
+
[source]
----
<jms:connector name="jmsConnector"
    jndiInitialFactory="com.sun.jndi.ldap.LdapCtxFactory"
    jndiProviderUrl="ldap://localhost:10389/"
    connectionFactoryJndiName="cn=ConnectionFactory,dc=example,dc=com"
    jndiDestinations="true"
    forceJndiDestinations="true"/>
----

. Using a `JndiNameResolver`. A `JndiNameResolver` defines a strategy for lookup objects by name using JNDI. The strategy contains a lookup method that receives a name and returns the object associated to that name.

At the moment, there are two simple implementations of that interface:

*SimpleJndiNameResolver*: Uses a JNDI context instance to search for the names. That instance is maintained opened during the full lifecycle of the name resolver.

*CachedJndiNameResolver*: Uses a simple cache in order to store previously resolved names. A JNDI context instance is created for each request that is sent to the JNDI server and then the instance is freed. The cache can be cleaned up restarting the name resolver.

Default JNDI name resolver example: Define the name resolver using the *defualt-jndi-name-resolver* tag and then add the appropriate properties to it.

[source]
----
<jms:activemq-connector name="jmsConnector"
                            jndiDestinations="true"
                            connectionFactoryJndiName="ConnectionFactory">
        <jms:default-jndi-name-resolver
                jndiInitialFactory="org.apache.activemq.jndi.ActiveMQInitialContextFactory"
                jndiProviderUrl="vm://localhost?broker.persistent=false&amp;broker.useJmx=false"
                jndiProviderProperties-ref="providerProperties"/>
    </jms:activemq-connector>
----

*Custom JNDI name resolver example*: Define the name resolver using the `custom-jndi-name-resolver` tag, then add the appropriate property value using the Spring's property format.

[source]
----
<jms:activemq-connector name="jmsConnector"
                            jndiDestinations="true"
                            connectionFactoryJndiName="ConnectionFactory">
        <jms:custom-jndi-name-resolver class="org.mule.transport.jms.jndi.CachedJndiNameResolver">
            <spring:property name="jndiInitialFactory" value="org.apache.activemq.jndi.ActiveMQInitialContextFactory"/>
            <spring:property name="jndiProviderUrl"
                             value="vm://localhost?broker.persistent=false&amp;broker.useJmx=false"/>
            <spring:property name="jndiProviderProperties" ref="providerProperties"/>
        </jms:custom-jndi-name-resolver>
    </jms:activemq-connector>
----

== Changes in JmsConnector

There are some property changes in the JmsConnector definition. Some properties are now deprecated as they should be defined in a JndiNameResolver and then using that JndiNameResolver in the JmsConnector.

Deprecated properties in JmsConnector:

* jndiContext
* jndiInitialFactory
* jndiProviderUrl
* jndiProviderProperties-ref

Added property:

* jndiNameResolver: Sets a proper JndiNameResolver. Can be set using the `default-jndi-name-resolver` or `custom-jndi-name-resolver` tags inside the JmsConnector definition.

== JMS Selectors

You can set a JMS selector as a filter on an inbound endpoint. The JMS selector simply sets the filter expression on the JMS consumer.

[width="100%",cols=",",options="header"]
|===
^|JMS Selector
a|

[source]
----
<jms:inbound-endpoint queue="important.queue">
    <jms:selector expression="JMSPriority=9"/>
</jms:inbound-endpoint>
----
|===

== JMS Header Properties

Once a JMS message is received by Mule, the standard JMS headers such as `JMSCorrelationID` and `JMSRedelivered` are made available as properties on the MuleMessage object.

[width="100%",cols=",",options="header"]
|===
^|Retrieving JMS Headers
a|

[source]
----
String corrId = (String) muleMessage.getProperty("JMSCorrelationID");
boolean redelivered =  muleMessage.getBooleanProperty("JMSRedelivered");
----
|===

You can access any custom header properites on the message in the same way.

== Configuring Transactional Polling (Enterprise)

The Enterprise version of the JMS transport can be configured for transactional polling using the `TransactedPollingJmsMessageReceiver`.

[width="100%",cols=",",options="header"]
|===
^|Transactional Polling
a|

[source]
----
<jms:connector ...cut...>
     <service-overrides transactedMessageReceiver="com.mulesoft.mule.transport.jms.TransactedPollingJmsMessageReceiver" />
</jms:connector>
 
<jms:inbound-endpoint queue="my.queue">
     <properties>
          <spring:entry key="pollingFrequency" value="5000" /> ❶
     </properties>
</jms:inbound-endpoint>
----
|===

❶ Each receiver polls with a 5 second interval

== Disable Reply Message

When an incoming message has the `replyTo` property set, you may wish to disable the automatic reply message on a flow starting with a one-way JMS inbound endpoint. To do so, set the following variable anywhere in your flow to prevent Mule from automatically sending a response.

[source]
----
<set-variable variableName="MULE_REPLYTO_STOP" value="true" doc:name="Variable"/>  
----

== Implementing Message Groups

Message groups provide ordering of related messages, load balancing across multiple consumers, and auto failover to other consumers if JVM goes down. Messages in a group deliver to the same consumer as long as it's available but switch to another consumer if the first goes away.

You can implement a message group by setting JMSGroupID property on the client producer (outbound endpoint) before sending it off. By default, all messages deliver in the same order as they arrive, but it's also possible to set the JMSXGroupSec property to control in which order different messages should be delivered.

An example in a flow is:

[source]
----
<jms:outbound-endpoint queue="orders.car" connector-ref="amqConnector">
    <message-properties-transformer scope="outbound">
        <add-message-property key="JMSXGroupID" value="#[xpath://type]"/>
    </message-properties-transformer>
...
----

For more information, see http://blogs.mulesoft.org/message-sequencing-with-mule-and-jms-message-groups/[Message Sequencing with Mule and JMS Message Groups].

== Modifying Message Properties

To modify the priority of a JMS message, set the `priority` key as the name of the property instead of using the `JMSpriority` key:

[source]
----
<message-properties-transformer doc:name="Message Properties">
    <add-message-property key="priority" value="6"/>
</message-properties-transformer>
----

This won't work:

[source]
----
<message-properties-transformer doc:name="Message Properties">
    <add-message-property key="JMSPriority" value="6"/>
</message-properties-transformer>
----

== Example Configurations

[width="100%",cols=",",options="header"]
|===
^|Example Configuration
a|

[source]
----
<mule ...cut...
  xmlns:jms="http://www.mulesoft.org/schema/mule/jms"
  xsi:schemaLocation="...cut...
    http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/3.5/mule-jms.xsd"> ❶
 
    <spring:bean name="connectionFactory" class="com.foo.FooConnectionFactory"/>
 
    <jms:connector name="jmsConnector" connectionFactory-ref="connectionFactory" username="myuser" password="mypass" />
 
    <flow name="MyFlow">
        <jms:inbound-endpoint queue="in" />
        <component class="com.foo.MyComponent" />
        <jms:outbound-endpoint queue="out" />
    </flow>
</mule>
----
|===

❶ Import the JMS schema namespace

[width="100%",cols=",",options="header"]
|===
^|Example Configuration with Transactions
a|

[source]
----
<mule ...cut...
  xmlns:jms="http://www.mulesoft.org/schema/mule/jms"
  xsi:schemaLocation="...cut...
    http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/3.5/mule-jms.xsd">
 
    <spring:bean name="connectionFactory" class="com.foo.FooConnectionFactory"/>
 
    <jms:connector name="jmsConnector" connectionFactory-ref="connectionFactory" username="myuser" password="mypass" />
 
    <flow name="MyFlow">
        <jms:inbound-endpoint queue="in">
            <jms:transaction action="ALWAYS_BEGIN" /> ❶
        </jms:inbound-endpoint>
        <component class="com.foo.MyComponent" />
        <jms:outbound-endpoint queue="out">
            <jms:transaction action="ALWAYS_JOIN" /> ❶
        </jms:outbound-endpoint>
    </flow>
</mule>
----
|===

❶ Local JMS transaction

[width="100%",cols=",",options="header"]
|===
^|Example Configuration with Exception Strategy
a|

[source]
----
<mule ...cut...
  xmlns:jms="http://www.mulesoft.org/schema/mule/jms"
  xsi:schemaLocation="...cut...
    http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/3.5/mule-jms.xsd">
 
    <spring:bean name="connectionFactory" class="com.foo.FooConnectionFactory"/>
 
    <jms:connector name="jmsConnector" connectionFactory-ref="connectionFactory" username="myuser" password="mypass" />
 
    <flow name="MyFlow">
        <jms:inbound-endpoint queue="in">
            <jms:transaction action="ALWAYS_BEGIN" />
        </jms:inbound-endpoint>
        <component class="com.foo.MyComponent" />
        <jms:outbound-endpoint queue="out">
            <jms:transaction action="ALWAYS_JOIN" />
        </jms:outbound-endpoint>
        <default-exception-strategy>
            <commit-transaction exception-pattern="com.foo.ExpectedExceptionType"/> ❶
            <jms:outbound-endpoint queue="dead.letter"> ❷
                <jms:transaction action="JOIN_IF_POSSIBLE" />
            </jms:outbound-endpoint>
        </default-exception-strategy>
    </flow>
</mule>
----
|===

❶ Set `exception-pattern="*"` to catch all exception types

❷ Implements a dead letter queue for erroneous messages

== Vendor-Specific Configuration (Enterprise)

Mule Enterprise includes an link:/docs/display/35X/Mule+WMQ+Transport+Reference[enhanced transport for WebSphereMQ] which is recommended if you are using WebSphereMQ as your JMS provider.

http://activemq.apache.org/[ActiveMQ] is also widely-used with Mule and has link:/docs/display/35X/ActiveMQ+Integration[simplified configuration].

Information for configuring other JMS providers can be found here. Beware that some of this information may be out-of-date.

* link:/docs/display/35X/HornetQ+Integration[HornetQ]
* link:/docs/display/35X/Open+MQ+Integration[Open MQ]
* link:/docs/display/35X/Solace+JMS[Solace JMS]
* link:/docs/display/35X/Tibco+EMS+Integration[Tibco EMS]

== Reference

=== JMS Transport

The JMS transport provides support for sending messages via JMS queues.

=== Connector

The connector element configures a generic connector for sending and receiving messages over JMS queues.

.Attibutes of <connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|connectionFactory-ref |string |no |  |Reference to the connection factory, which is required for non-vendor JMS configurations.
|redeliveryHandlerFactory-ref |string |no |  |Reference to the redelivery handler.
|acknowledgementMode |enumeration |no |AUTO_ACKNOWLEDGE |The acknowledgement mode to use: AUTO_ACKNOWLEDGE, CLIENT_ACKNOWLEDGE, or DUPS_OK_ACKNOWLEDGE.
|clientId |string |no |  |The ID of the JMS client.
|durable |boolean |no |  |Whether to make all topic subscribers durable.
|noLocal |boolean |no |  |If set to true, a subscriber will not receive messages that were published by its own connection.
|persistentDelivery |boolean |no |  |If set to true, the JMS provider logs the message to stable storage as it is sent so that it can be recovered if delivery is unsuccessful. A client marks a message as persistent if it feels that the application will have problems if the message is lost in transit. A client marks a message as non-persistent if an occasional lost message is tolerable. Clients use delivery mode to tell a JMS provider how to balance message transport reliability/throughput. Delivery mode only covers the transport of the message to its destination. Retention of a message at the destination until its receipt is acknowledged is not guaranteed by a PERSISTENT delivery mode. Clients should assume that message retention policies are set administratively. Message retention policy governs the reliability of message delivery from destination to message consumer. For example, if a client's message storage space is exhausted, some messages as defined by a site specific message retention policy may be dropped. A message is guaranteed to be delivered once-and-only-once by a JMS Provider if the delivery mode of the messge is persistent and if the destination has a sufficient message retention policy.
|honorQosHeaders |boolean |no |  |If set to true, the message's QoS headers are honored. If false (the default), the connector settings override the message headers.
|maxRedelivery |integer |no |  |The maximum number of times to try to redeliver a message. Use -1 to accept messages with any redelivery count.
|cacheJmsSessions |boolean |no |true |Whether to cache and re-use the JMS session and producer object instead of recreating them for each request. The default behaviour is to cache JMS Sessions and Producers (previous to 3.6, the default behaviuor was to not cache them). NOTE: This is NOT supported with XA transactions or JMS 1.0.2b.
|eagerConsumer |boolean |no |  |Whether to create a consumer right when the connection is created instead of using lazy instantiation in the poll loop.
|specification |enumeration |no |1.0.2b |The JMS specification to use: 1.0.2b (the default) or 1.1
|username |string |no |  |The user name for the connection
|password |string |no |  |The password for the connection
|numberOfConsumers |integer |no |  |The number of concurrent consumers that will be used to receive JMS messages. (Note: If you use this attribute, you should not configure the 'numberOfConcurrentTransactedReceivers', which has the same effect.)
|jndiInitialFactory |string |no |  |The initial factory class to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref properties to configure this value.
|jndiProviderUrl |string |no |  |The URL to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref properties to configure this value.
|jndiProviderProperties-ref |string |no |  |Reference to a Map that contains additional provider properties. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|connectionFactoryJndiName |string |no |  |The name to use when looking up the connection factory from JNDI.
|jndiDestinations |boolean |no |  |Set this attribute to true if you want to look up queues or topics from JNDI instead of creating them from the session.
|forceJndiDestinations |boolean |no |  |If set to true, Mule fails when a topic or queue cannot be retrieved from JNDI. If set to false, Mule will create a topic or queue from the JMS session if the JNDI lookup fails.
|disableTemporaryReplyToDestinations |boolean |no |  |If this is set to false (the default), when Mule performs request/response calls a temporary destination will automatically be set up to receive a response from the remote JMS call.
|embeddedMode |boolean |no |false |Some application servers, like WebSphere AS, don't allow certain methods to be called on JMS objects, effectively limiting available features. Embedded mode tells Mule to avoid those whenever possible. Default is false.
|===

.Child Elements of <connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|abstract-jndi-name-resolver |0..1 |A placeholder for jndi-name-resolver strategy elements.
|===

=== Inbound endpoint

The inbound-endpoint element configures an endpoint on which JMS messages are received.

.Attributes of <inbound-endpoint...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|durableName |string |no | |(As of 2.2.2) Allows the name for the durable topic subscription to be specified.
|queue |string |no | |The queue name. This attribute cannot be used with the topic attribute (the two are exclusive).
|topic |string |no | |The topics name. The "topic:" prefix will be added automatically. This attribute cannot be used with the queue attribute (the two are exclusive).
|disableTemporaryReplyToDestinations |boolean |no | |If this is set to false (the default), when Mule performs request/response calls a temporary destination will automatically be set up to receive a response from the remote JMS call.
|===

.Child Elements of <inbound-endpoint...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|mule:abstract-xa-transaction |0..1 |
|selector |0..1 |
|===

=== Outbound endpoint

The inbound-endpoint element configures an endpoint to which JMS messages are sent.

.Attributes of <outbound-endpoint...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|queue |string |no | |The queue name. This attribute cannot be used with the topic attribute (the two are exclusive).
|topic |string |no | |The topic name. The "topic:" prefix will be added automatically. This attribute cannot be used with the queue attribute (the two are exclusive).
|disableTemporaryReplyToDestinations |boolean |no |If this is set to false (the default), when Mule performs request/response calls a temporary destination will automatically be set up to receive a response from the remote JMS call.
|===

.Child Elements of <outbound-endpoint...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|mule:abstract-xa-transaction |0..1 |
|selector |0..1 |
|===

=== Endpoint

The endpoint element configures a global JMS endpoint definition.

.Attibutes of <endpoint...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|queue |string |no | |The queue name. This attribute cannot be used with the topic attribute (the two are exclusive).
|topic |string |no | |The topic name. The "topic:" prefix will be added automatically. This attribute cannot be used with the queue attribute (the two are exclusive).
|disableTemporaryReplyToDestinations |boolean |no | |If this is set to false (the default), when Mule performs request/response calls a temporary destination will automatically be set up to receive a response from the remote JMS call.
|===

.Child Elements of <endpoint...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|mule:abstract-xa-transaction |0..1 |
|selcetor |0..1 |
|===

=== Transformers

These are transformers specific to this transport. Note that these are added automatically to the Mule registry at start up. When doing automatic transformations these will be included when searching for the correct transformers.

[width="100%",cols=",",options="header"]
|===
|Name |Description
|jmsmessage-to-object-transformer |he jmsmessage-to-object-transformer element configures a transformer that converts a JMS message into an object by extracting the message payload.
|object-to-jmsmessage-transformer |The object-to-jmsmessage-transformer element configures a transformer that converts an object into one of five types of JMS messages, depending on the object passed in: java.lang.String -> javax.jms.TextMessage, byte[] -> javax.jms.BytesMessage, java.util.Map (primitive types) -> javax.jms.MapMessage, java.io.InputStream (or java.util.List of primitive types) -> javax.jms.StreamMessage, and java.lang.Serializable including java.util.Map, java.util.List, and java.util.Set objects that contain serializable objects (including primitives) -> javax.jms.ObjectMessage
|===

== Filters

Filters can be used to control which data is allowed to continue in the flow.

[width="100%",cols=",",options="header"]
|===
|Name |Description
|property-filter |The property-filter element configures a filter that allows you to filter messages based on a JMS property.
|===

=== Custom connector

The custom-connector element configures a custom connector for sending and receiving messages over JMS queues.

=== Activemq connector

The activemq-connector element configures an ActiveMQ version of the JMS connector.

.Attributes of <activemq-connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|connectionFactory-ref |string |no |  |Optional reference to the connection factory. A default connection factory is provided for vendor-specific JMS configurations.
|redeliveryHandlerFactory-ref |string |no |  |Reference to the redelivery handler.
|acknowledgementMode |enumeration |no |AUTO_ACKNOWLEDGE |The acknowledgement mode to use: AUTO_ACKNOWLEDGE, CLIENT_ACKNOWLEDGE, or DUPS_OK_ACKNOWLEDGE.
|clientId |string |no |  |The ID of the JMS client.
|durable |boolean |no |  |Whether to make all topic subscribers durable.
|noLocal |boolean |no |  |If set to true, a subscriber will not receive messages that were published by its own connection.
|persistentDelivery |boolean |no |  |If set to true, the JMS provider logs the message to stable storage as it is sent so that it can be recovered if delivery is unsuccessful. A client marks a message as persistent if it feels that the application will have problems if the message is lost in transit. A client marks a message as non-persistent if an occasional lost message is tolerable. Clients use delivery mode to tell a JMS provider how to balance message transport reliability/throughput. Delivery mode only covers the transport of the message to its destination. Retention of a message at the destination until its receipt is acknowledged is not guaranteed by a PERSISTENT delivery mode. Clients should assume that message retention policies are set administratively. Message retention policy governs the reliability of message delivery from destination to message consumer. For example, if a client's message storage space is exhausted, some messages as defined by a site specific message retention policy may be dropped. A message is guaranteed to be delivered once-and-only-once by a JMS Provider if the delivery mode of the messge is persistent and if the destination has a sufficient message retention policy.
|honorQosHeaders |boolean |no |  |If set to true, the message's QoS headers are honored. If false (the default), the connector settings override the message headers.
|maxRedelivery |integer |no |  |The maximum number of times to try to redeliver a message. Use -1 to accept messages with any redelivery count.
|cacheJmsSessions |boolean |no |true |Whether to cache and re-use the JMS session and producer object instead of recreating them for each request. The default behaviour is to cache JMS Sessions and Producers (previous to 3.6, the default behaviuor was to not cache them). NOTE: This is NOT supported with XA transactions or JMS 1.0.2b.
|eagerConsumer |boolean |no |  |Whether to create a consumer right when the connection is created instead of using lazy instantiation in the poll loop.
|specification |enumeration |no |1.0.2b |The JMS specification to use: 1.0.2b (the default) or 1.1
|username |string |no |  |The user name for the connection
|password |string |no |  |The password for the connection
|numberOfConsumers |integer |no |  |The number of concurrent consumers that will be used to receive JMS messages. (Note: If you use this attribute, you should not configure the 'numberOfConcurrentTransactedReceivers', which has the same effect.)
|jndiInitialFactory |string |no |  |The initial factory class to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderUrl |string |no |  |The URL to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderProperties-ref |string |no |  |Reference to a Map that contains additional provider properties. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|connectionFactoryJndiName |string |no |  |The name to use when looking up the connection factory from JNDI.
|jndiDestinations |boolean |no |  |Set this attribute to true if you want to look up queues or topics from JNDI instead of creating them from the session.
|forceJndiDestinations |boolean |no |  |If set to true, Mule fails when a topic or queue cannot be retrieved from JNDI. If set to false, Mule will create a topic or queue from the JMS session if the JNDI lookup fails.
|disableTemporaryReplyToDestinations |boolean |no |  |If this is set to false (the default), when Mule performs request/response calls a temporary destination will automatically be set up to receive a response from the remote JMS call.
|embeddedMode |boolean |no |false |Some application servers, like WebSphere AS, don't allow certain methods to be called on JMS objects, effectively limiting available features. Embedded mode tells Mule to avoid those whenever possible. Default is false.
|brokerURL |string |no |  |The URL used to connect to the JMS server. If not set, the default is vm://localhost?broker.persistent=false&broker.useJmx=false.
|===

.Child Elements of <activemq-connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|abstract-jndi-name-resolver |0..1 |A placeholder for jndi-name-resolver strategy elements.
|===

=== Activemq XA Connector

The activemq-xa-connector element configures an ActiveMQ version of the JMS connector with XA transaction support.

.Attibutes of <activemq-xa-connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|connectionFactory-ref |string |no |  |Optional reference to the connection factory. A default connection factory is provided for vendor-specific JMS configurations.
|redeliveryHandlerFactory-ref |string |no |  |Reference to the redelivery handler.
|acknowledgementMode |enumeration |no |AUTO_ACKNOWLEDGE |The acknowledgement mode to use: AUTO_ACKNOWLEDGE, CLIENT_ACKNOWLEDGE, or DUPS_OK_ACKNOWLEDGE.
|clientId |string |no |  |The ID of the JMS client.
|durable |boolean |no |  |Whether to make all topic subscribers durable.
|noLocal |boolean |no |  |If set to true, a subscriber will not receive messages that were published by its own connection.
|persistentDelivery |boolean |no |  |If set to true, the JMS provider logs the message to stable storage as it is sent so that it can be recovered if delivery is unsuccessful. A client marks a message as persistent if it feels that the application will have problems if the message is lost in transit. A client marks a message as non-persistent if an occasional lost message is tolerable. Clients use delivery mode to tell a JMS provider how to balance message transport reliability/throughput. Delivery mode only covers the transport of the message to its destination. Retention of a message at the destination until its receipt is acknowledged is not guaranteed by a PERSISTENT delivery mode. Clients should assume that message retention policies are set administratively. Message retention policy governs the reliability of message delivery from destination to message consumer. For example, if a client's message storage space is exhausted, some messages as defined by a site specific message retention policy may be dropped. A message is guaranteed to be delivered once-and-only-once by a JMS Provider if the delivery mode of the messge is persistent and if the destination has a sufficient message retention policy.
|honorQosHeaders |boolean |no |  |If set to true, the message's QoS headers are honored. If false (the default), the connector settings override the message headers.
|maxRedelivery |integer |no |  |The maximum number of times to try to redeliver a message. Use -1 to accept messages with any redelivery count.
|cacheJmsSessions |boolean |no |true |Whether to cache and re-use the JMS session and producer object instead of recreating them for each request. The default behaviour is to cache JMS Sessions and Producers (previous to 3.6, the default behaviuor was to not cache them). NOTE: This is NOT supported with XA transactions or JMS 1.0.2b.
|eagerConsumer |boolean |no |  |Whether to create a consumer right when the connection is created instead of using lazy instantiation in the poll loop.
|specification |enumeration |no |1.0.2b |The JMS specification to use: 1.0.2b (the default) or 1.1
|username |string |no |  |The user name for the connection
|password |string |no |  |The password for the connection
|numberOfConsumers |integer |no |  |The number of concurrent consumers that will be used to receive JMS messages. (Note: If you use this attribute, you should not configure the 'numberOfConcurrentTransactedReceivers', which has the same effect.)
|jndiInitialFactory |string |no |  |The initial factory class to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderUrl |string |no |  |The URL to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderProperties-ref |string |no |  |Reference to a Map that contains additional provider properties. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|connectionFactoryJndiName |string |no |  |The name to use when looking up the connection factory from JNDI.
|jndiDestinations |boolean |no |  |Set this attribute to true if you want to look up queues or topics from JNDI instead of creating them from the session.
|forceJndiDestinations |boolean |no |  |If set to true, Mule fails when a topic or queue cannot be retrieved from JNDI. If set to false, Mule will create a topic or queue from the JMS session if the JNDI lookup fails.
|disableTemporaryReplyToDestinations |boolean |no |  |If this is set to false (the default), when Mule performs request/response calls a temporary destination will automatically be set up to receive a response from the remote JMS call.
|embeddedMode |boolean |no |false |Some application servers, like WebSphere AS, don't allow certain methods to be called on JMS objects, effectively limiting available features. Embedded mode tells Mule to avoid those whenever possible. Default is false.
|brokerURL |string |no |  |The URL used to connect to the JMS server. If not set, the default is vm://localhost?broker.persistent=false&broker.useJmx=false.
|===

.Child Elements of <activemq-xa-connector...>

[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|abstract-jndi-name-resolver |0..1 |A placeholder for jndi-name-resolver strategy elements.
|===

== Mulemq xa connector

The mulemq-xa-connector element configures a MuleMQ version of the JMS XA connector.

.Attributes of <mulemq-xa-connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|connectionFactory-ref |string |no |  |Optional reference to the connection factory. A default connection factory is provided for vendor-specific JMS configurations.
|redeliveryHandlerFactory-ref |string |no |  |Reference to the redelivery handler.
|acknowledgementMode |enumeration |no |AUTO_ACKNOWLEDGE |The acknowledgement mode to use: AUTO_ACKNOWLEDGE, CLIENT_ACKNOWLEDGE, or DUPS_OK_ACKNOWLEDGE.
|clientId |string |no |  |The ID of the JMS client.
|durable |boolean |no |  |Whether to make all topic subscribers durable.
|noLocal |boolean |no |  |If set to true, a subscriber will not receive messages that were published by its own connection.
|persistentDelivery |boolean |no |  |If set to true, the JMS provider logs the message to stable storage as it is sent so that it can be recovered if delivery is unsuccessful. A client marks a message as persistent if it feels that the application will have problems if the message is lost in transit. A client marks a message as non-persistent if an occasional lost message is tolerable. Clients use delivery mode to tell a JMS provider how to balance message transport reliability/throughput. Delivery mode only covers the transport of the message to its destination. Retention of a message at the destination until its receipt is acknowledged is not guaranteed by a PERSISTENT delivery mode. Clients should assume that message retention policies are set administratively. Message retention policy governs the reliability of message delivery from destination to message consumer. For example, if a client's message storage space is exhausted, some messages as defined by a site specific message retention policy may be dropped. A message is guaranteed to be delivered once-and-only-once by a JMS Provider if the delivery mode of the messge is persistent and if the destination has a sufficient message retention policy.
|honorQosHeaders |boolean |no |  |If set to true, the message's QoS headers are honored. If false (the default), the connector settings override the message headers.
|maxRedelivery |integer |no |  |The maximum number of times to try to redeliver a message. Use -1 to accept messages with any redelivery count.
|cacheJmsSessions |boolean |no |true |Whether to cache and re-use the JMS session and producer object instead of recreating them for each request. The default behaviour is to cache JMS Sessions and Producers (previous to 3.6, the default behaviuor was to not cache them). NOTE: This is NOT supported with XA transactions or JMS 1.0.2b.
|eagerConsumer |boolean |no |  |Whether to create a consumer right when the connection is created instead of using lazy instantiation in the poll loop.
|specification |enumeration |no |1.0.2b |The JMS specification to use: 1.0.2b (the default) or 1.1
|username |string |no |  |The user name for the connection
|password |string |no |  |The password for the connection
|numberOfConsumers |integer |no |  |The number of concurrent consumers that will be used to receive JMS messages. (Note: If you use this attribute, you should not configure the 'numberOfConcurrentTransactedReceivers', which has the same effect.)
|jndiInitialFactory |string |no |  |The initial factory class to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderUrl |string |no |  |The URL to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderProperties-ref |string |no |  |Reference to a Map that contains additional provider properties. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|connectionFactoryJndiName |string |no |  |The name to use when looking up the connection factory from JNDI.
|jndiDestinations |boolean |no |  |Set this attribute to true if you want to look up queues or topics from JNDI instead of creating them from the session.
|forceJndiDestinations |boolean |no |  |If set to true, Mule fails when a topic or queue cannot be retrieved from JNDI. If set to false, Mule will create a topic or queue from the JMS session if the JNDI lookup fails.
|disableTemporaryReplyToDestinations |boolean |no |  |If this is set to false (the default), when Mule performs request/response calls a temporary destination will automatically be set up to receive a response from the remote JMS call.
|embeddedMode |boolean |no |false |Some application servers, like WebSphere AS, don't allow certain methods to be called on JMS objects, effectively limiting available features. Embedded mode tells Mule to avoid those whenever possible. Default is false.
|brokerURL |string |no |  |The URL used to connect to the JMS server. If not set, the default is nsp://localhost:9000. When connecting to a cluster separate urls with a comma.
|bufferOutput |string |no |queued |Specifies the type of write handler the client will use to send events to the realm. This can be either standard, direct or queued. Unless specified, standard is used. For better latencies use direct, however, this will impact CPU since each write is not buffered but flushed directly. The queued handler will improve CPU and may give better overall throughput since there will be some buffering between client and server. The best of both options is the standard, which attempts to write directly but will back off and buffer the IO flushes when throughput increases and impacts CPU.
|syncWrites |boolean |no |false |Sets whether each write to the store will also call sync on the file system to ensure all data is written to the disk, default is false.
|syncBatchSize |integer |no |50 |Sets the size of the write sync batch, default is 50, range is 1 to Integer.MAX_VALUE.
|syncTime |integer |no |20 |Sets the time interval between sync batches, default is 20 milliseconds, range is 1 to Integer.MAX_VALUE.
|globalStoreCapacity |integer |no |5000 |Sets that the default channel/queue capacity setting which will prevent publishing of further events once topic or queue is full, default is 5000, valid range is 1 to Integer.MAX_VALUE.
|maxUnackedSize |integer |no |100 |Specifies the maximum number of unacknowledged events a connection will keep in memory before beginning to remove the oldest, default is 100, range is 1 to Integer.MAX_VALUE.
|useJMSEngine |boolean |no |true |All JMS Topics require this setting to be true, however, if you wish to use different channel types with different fanout engines (in MULEMQ+ only), this can be set to false.
|queueWindowSize |integer |no |100 |When using queues, this specifies the number of messages that the server will send in each block between acknowledgments, default is 100, range is 1 to Integer.MAX_VALUE.
|autoAckCount |integer |no |50 |When auto acknowledgment mode is selected, rather than ack each event, each nth event will be acknowledged, default is 50, range is 1 to Integer.MAX_VALUE.
|enableSharedDurable |boolean |no |false |Allows more than 1 durable subscriber on a topic sharing the same name, with only 1 consuming the events. When the first durable disconnects, the second will take over and so on. Default is false.
|randomiseRNames |boolean |no |true |With multiple RNAMEs, the ability to randomize the RNAMEs is useful for load balancing between cluster nodes.
|messageThreadPoolSize |integer |no |30 |Indicates the maximum number of threads each connection will use to deliver asynchronous events, default is 30, range is 1 to Integer.MAX_VALUE
|discOnClusterFailure |boolean |no |true |Indicates whether the client connection will be disconnected when the cluster fails, which will cause automatic reconnect to occur, default is true.
|initialRetryCount |integer |no |2 |The maximum number of attempts a connection will try to connect to a realm on startup, default is 2, 0 is infinite, range is Integer.MIN_VALUE to Integer.MAX_VALUE
|muleMqMaxRedelivery |integer |no |100 |This indicates the size of the map of redelivered events to store for each consumer, once this limit is reached the oldest will be removed, default is 100, range is 1 to 100
|retryCommit |boolean |no |false |If a transacted session commit fails, if this is true, the commit will be retried until either it succeeds or fails with a transaction timeout, default is false.
|enableMultiplexedConnections |boolean |no |false |if this is true, the session will be multiplexed on a single connection else a new socket is created for each session, default is false.
|===

.Child Elements of <mulemq-xa-connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|abstract-jndi-name-resolver |0..1 |A placeholder for jndi-name-resolver strategy elements.
|===

== Weblogic connector

The weblogic-connector element configures a WebLogic version of the JMS connector.

.Attributes of <weblogic-connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|connectionFactory-ref |string |no |  |Optional reference to the connection factory. A default connection factory is provided for vendor-specific JMS configurations.
|redeliveryHandlerFactory-ref |string |no |  |Reference to the redelivery handler.
|acknowledgementMode |enumeration |no |AUTO_ACKNOWLEDGE |The acknowledgement mode to use: AUTO_ACKNOWLEDGE, CLIENT_ACKNOWLEDGE, or DUPS_OK_ACKNOWLEDGE.
|clientId |string |no |  |The ID of the JMS client.
|durable |boolean |no |  |Whether to make all topic subscribers durable.
|noLocal |boolean |no |  |If set to true, a subscriber will not receive messages that were published by its own connection.
|persistentDelivery |boolean |no |  |If set to true, the JMS provider logs the message to stable storage as it is sent so that it can be recovered if delivery is unsuccessful. A client marks a message as persistent if it feels that the application will have problems if the message is lost in transit. A client marks a message as non-persistent if an occasional lost message is tolerable. Clients use delivery mode to tell a JMS provider how to balance message transport reliability/throughput. Delivery mode only covers the transport of the message to its destination. Retention of a message at the destination until its receipt is acknowledged is not guaranteed by a PERSISTENT delivery mode. Clients should assume that message retention policies are set administratively. Message retention policy governs the reliability of message delivery from destination to message consumer. For example, if a client's message storage space is exhausted, some messages as defined by a site specific message retention policy may be dropped. A message is guaranteed to be delivered once-and-only-once by a JMS Provider if the delivery mode of the messge is persistent and if the destination has a sufficient message retention policy.
|honorQosHeaders |boolean |no |  |If set to true, the message's QoS headers are honored. If false (the default), the connector settings override the message headers.
|maxRedelivery |integer |no |  |The maximum number of times to try to redeliver a message. Use -1 to accept messages with any redelivery count.
|cacheJmsSessions |boolean |no |true |Whether to cache and re-use the JMS session and producer object instead of recreating them for each request. The default behaviour is to cache JMS Sessions and Producers (previous to 3.6, the default behaviuor was to not cache them). NOTE: This is NOT supported with XA transactions or JMS 1.0.2b.
|eagerConsumer |boolean |no |  |Whether to create a consumer right when the connection is created instead of using lazy instantiation in the poll loop.
|specification |enumeration |no |1.0.2b |The JMS specification to use: 1.0.2b (the default) or 1.1
|username |string |no |  |The user name for the connection
|password |string |no |  |The password for the connection
|numberOfConsumers |integer |no |  |The number of concurrent consumers that will be used to receive JMS messages. (Note: If you use this attribute, you should not configure the 'numberOfConcurrentTransactedReceivers', which has the same effect.)
|jndiInitialFactory |string |no |  |The initial factory class to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderUrl |string |no |  |The URL to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderProperties-ref |string |no |  |Reference to a Map that contains additional provider properties. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|connectionFactoryJndiName |string |no |  |The name to use when looking up the connection factory from JNDI.
|jndiDestinations |boolean |no |  |Set this attribute to true if you want to look up queues or topics from JNDI instead of creating them from the session.
|forceJndiDestinations |boolean |no |  |If set to true, Mule fails when a topic or queue cannot be retrieved from JNDI. If set to false, Mule will create a topic or queue from the JMS session if the JNDI lookup fails.
|disableTemporaryReplyToDestinations |boolean |no |  |If this is set to false (the default), when Mule performs request/response calls a temporary destination will automatically be set up to receive a response from the remote JMS call.
|embeddedMode |boolean |no |false |Some application servers, like WebSphere AS, don't allow certain methods to be called on JMS objects, effectively limiting available features. Embedded mode tells Mule to avoid those whenever possible. Default is false.
|===

.Child Elements of <weblogic-connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|abstract-jndi-name-resolver |0..1 |A placeholder for jndi-name-resolver strategy elements.
|===

== Websphere connector

The websphere-connector element configures a WebSphere version of the JMS connector.

.Attributes of <websphere-connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|connectionFactory-ref |string |no |  |Optional reference to the connection factory. A default connection factory is provided for vendor-specific JMS configurations.
|redeliveryHandlerFactory-ref |string |no |  |Reference to the redelivery handler.
|acknowledgementMode |enumeration |no |AUTO_ACKNOWLEDGE |The acknowledgement mode to use: AUTO_ACKNOWLEDGE, CLIENT_ACKNOWLEDGE, or DUPS_OK_ACKNOWLEDGE.
|clientId |string |no |  |The ID of the JMS client.
|durable |boolean |no |  |Whether to make all topic subscribers durable.
|noLocal |boolean |no |  |If set to true, a subscriber will not receive messages that were published by its own connection.
|persistentDelivery |boolean |no |  |If set to true, the JMS provider logs the message to stable storage as it is sent so that it can be recovered if delivery is unsuccessful. A client marks a message as persistent if it feels that the application will have problems if the message is lost in transit. A client marks a message as non-persistent if an occasional lost message is tolerable. Clients use delivery mode to tell a JMS provider how to balance message transport reliability/throughput. Delivery mode only covers the transport of the message to its destination. Retention of a message at the destination until its receipt is acknowledged is not guaranteed by a PERSISTENT delivery mode. Clients should assume that message retention policies are set administratively. Message retention policy governs the reliability of message delivery from destination to message consumer. For example, if a client's message storage space is exhausted, some messages as defined by a site specific message retention policy may be dropped. A message is guaranteed to be delivered once-and-only-once by a JMS Provider if the delivery mode of the messge is persistent and if the destination has a sufficient message retention policy.
|honorQosHeaders |boolean |no |  |If set to true, the message's QoS headers are honored. If false (the default), the connector settings override the message headers.
|maxRedelivery |integer |no |  |The maximum number of times to try to redeliver a message. Use -1 to accept messages with any redelivery count.
|cacheJmsSessions |boolean |no |true |Whether to cache and re-use the JMS session and producer object instead of recreating them for each request. The default behaviour is to cache JMS Sessions and Producers (previous to 3.6, the default behaviuor was to not cache them). NOTE: This is NOT supported with XA transactions or JMS 1.0.2b.
|eagerConsumer |boolean |no |  |Whether to create a consumer right when the connection is created instead of using lazy instantiation in the poll loop.
|specification |enumeration |no |1.0.2b |The JMS specification to use: 1.0.2b (the default) or 1.1
|username |string |no |  |The user name for the connection
|password |string |no |  |The password for the connection
|numberOfConsumers |integer |no |  |The number of concurrent consumers that will be used to receive JMS messages. (Note: If you use this attribute, you should not configure the 'numberOfConcurrentTransactedReceivers', which has the same effect.)
|jndiInitialFactory |string |no |  |The initial factory class to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderUrl |string |no |  |The URL to use when connecting to JNDI. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|jndiProviderProperties-ref |string |no |  |Reference to a Map that contains additional provider properties. DEPRECATED: use jndiNameResolver-ref propertie to configure this value.
|connectionFactoryJndiName |string |no |  |The name to use when looking up the connection factory from JNDI.
|jndiDestinations |boolean |no |  |Set this attribute to true if you want to look up queues or topics from JNDI instead of creating them from the session.
|forceJndiDestinations |boolean |no |  |If set to true, Mule fails when a topic or queue cannot be retrieved from JNDI. If set to false, Mule will create a topic or queue from the JMS session if the JNDI lookup fails.
|disableTemporaryReplyToDestinations |boolean |no |  |If this is set to false (the default), when Mule performs request/response calls a temporary destination will automatically be set up to receive a response from the remote JMS call.
|embeddedMode |boolean |no |false |Some application servers, like WebSphere AS, don't allow certain methods to be called on JMS objects, effectively limiting available features. Embedded mode tells Mule to avoid those whenever possible. Default is false.
|===

.Child Elements of <websphere-connector...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|abstract-jndi-name-resolver |0..1 |A placeholder for jndi-name-resolver strategy elements.
|===

== Transaction

The transaction element configures a transaction. Transactions allow a series of operations to be grouped together so that they can be rolled back if a failure occurs. Set the action (such as ALWAYS_BEGIN or JOIN_IF_POSSIBLE) and the timeout setting for the transaction.

.Child Elements of <transaction...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|===

== Client ack transaction

The client-ack-transaction element configures a client acknowledgment transaction, which is identical to a transaction but with message acknowledgements. There is no notion of rollback with client acknowledgement, but this transaction can be useful for controlling how messages are consumed from a destination.

.Child Elements of <client-ack-transaction...>

[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|===

== Default jndi name resolver

.Attributes of <default-jndi-name-resolver...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|jndiInitialFactory |string |yes |  |The initial factory class to use when connecting to JNDI.
|jndiProviderUrl |string |yes |  |The URL to use when connecting to JNDI.
|jndiProviderProperties-ref |string |no |  |Reference to a Map that contains additional provider properties.
|initialContextFactory-ref |string |no |  |Reference to a javax.naming.spi.InitialContextFactory implementation that will be used to create the JDNI context.
|===

.Child Elements of <default-jndi-name-resolver...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|===

== Custom jndi name resolver

.Attributes of <custom-jndi-name-resolver...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|class |class name |yes |  |An implementation of the LifecycleAdapter interface.
|===

.Child Elements of <custom-jndi-name-resolver...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|spring:property |0..* |Spring-style property element for custom configuration.
|===

== Caching connection factory

DEPRECATED: This element is deprecated from Mule 3.6. This can still but used in 3.6, but it not necessary given that from Mule 3.6 JMS connections cache Sessions/Producers by default when a CachingConnectionFactory has not been configured explicitly.

.Attributes of <caching-connection-factory...>
[width="100%",cols=",",options="header"]
|===
|Name |Type |Required |Default |Description
|name |name (no spaces) |yes |  |Identifies the pool so that a connector can reference it.
|sessionCacheSize |integer |no |1 |Defines the maximum amount of connections that can be in the pool. NOTE: This cache size is the maximum limit for the number of cached Sessions per session acknowledgement type (auto, client, dups_ok, transacted). As a consequence, the actual number of cached Sessions may be up to four times as high as the specified value - in the unlikely case of mixing and matching different acknowledgement types.
|cacheProducers |boolean |no |true |Indicates whether to cache JMS MessageProducers for the JMS connection. Default is true
|connectionFactory-ref |name (no spaces) |yes |  |Reference to the connection factory
|username |string |no |  |The user name for the connection
|password |string |no |  |The password for the connection
|===

.Child Elements of <caching-connection-factory...>
[width="100%",cols=",",options="header"]
|===
|Name |Cardinality |Description
|===

=== XML Schema

Import the XML schema for this module as follows:

[source]
----
xmlns:jms="http://www.mulesoft.org/schema/mule/jms"
xsi:schemaLocation="http://www.mulesoft.org/schema/mule/jms  http://www.mulesoft.org/schema/mule/jms/3.6/mule-jms.xsd"
----

Complete http://www.mulesoft.org/docs/site/35X/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jms/namespace-overview.html[schema reference documentation].

=== Javadoc

Javadoc for this transport can be found below:

http://www.mulesoft.org/docs/site/35X/apidocs/org/mule/transport/jms/package-summary.html[JMS Transport Javadoc]

=== Maven

If you are using Maven to build your application, use the following groupId and artifactId to include this module as a dependency:

[source]
----
<dependency>
  <groupId>org.mule.transports</groupId>
  <artifactId>mule-transport-jms</artifactId>
</dependency>
----

== Notes

The JMS 1.0.2b specification has the limitation of only supporting queues or topics for each ConnectionFactory. If you need both, configure two separate connectors, one that references a `QueueConnectionFactory`, and another that references a `TopicConnectionFactory`. You can then use the `connector-ref` attribute to disambiguate the endpoints.

[width="100%",cols=",",options="header"]
|===
^|Workaround for 1.0.2b Specification
a|

[source]
----
<spring:bean name="queueConnectionFactory" class="com.foo.QueueConnectionFactory"/>
<spring:bean name="topicConnectionFactory" class="com.foo.TopicConnectionFactory"/>
 
<jms:connector name="jmsQueueConnector" connectionFactory-ref="queueConnectionFactory" />
<jms:connector name="jmsTopicConnector" connectionFactory-ref="topicConnectionFactory" />
 
<jms:outbound-endpoint queue="my.queue1" connector-ref="jmsQueueConnector"/>
<jms:outbound-endpoint queue="my.queue2" connector-ref="jmsQueueConnector"/>
 
<jms:inbound-endpoint topic="my.topic" connector-ref="jmsTopicConnector"/>
----
|===
